--- a/BethanysShop/appsettings.json
+++ b/BethanysShop/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BethanysPieShop-1ED06986-5F07-4A1C-85B9-D9F3F477BFF5;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqlExpressConnection": "Server=BEN-PC\\SQLEXPRESS;Database=PieShop;Trusted_Connection=True;"
+    "SqlExpressConnection": "Server=BEN-PC\\SQLEXPRESS;Database=PieShop;Trusted_Connection=True;",
+    "AwsRdsConnection": "Server=database-1.cvvx0bxl0n3a.eu-west-2.rds.amazonaws.com;Database=PieShop;User Id=admin;Password=*;"
   }, 
   "Logging": {
     "LogLevel": {
