--- a/BethanysShop/appsettings.json
+++ b/BethanysShop/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BethanysPieShop-1ED06986-5F07-4A1C-85B9-D9F3F477BFF5;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqlExpressConnection": "Server=BEN-PC\\SQLEXPRESS;Database=PieShop;Trusted_Connection=True;",
+    "DockerConnection": "Server=piedb;Database=PieShop;User Id=sa; Password=Sqlc0ntainersFTW!;",
     "AwsRdsConnection": "Server=database-1.cvvx0bxl0n3a.eu-west-2.rds.amazonaws.com;Database=PieShop;User Id=admin;Password=*;"
   }, 
   "Logging": {
