--- a/BethanysShop/Dockerfile
+++ b/BethanysShop/Dockerfile
@@ -17,5 +17,6 @@ RUN dotnet publish "BethanysShop.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
+ENV ASPNETCORE_URLS=http://+:5000
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "BethanysShop.dll"]
