--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       context: .
       dockerfile: BethanysShop/Dockerfile
     environment:
-      - ASPNETCORE_URLS=http://*:5000
+      - ASPNETCORE_URLS=http://+:5000
     ports:
       - "5000:5000"
 
